// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropWatcher matches checked snapshot 1`] = `
<label title="Watch changes">
  <input type="checkbox"
         checked
         value="_0:name"
  >
  <svg title="ic_visibility_24px.svg">
  </svg>
</label>
`;

exports[`PropWatcher matches default snapshot 1`] = `
<label title="Watch changes">
  <input type="checkbox"
         value="_0:name"
  >
  <svg title="ic_visibility_24px.svg">
  </svg>
</label>
`;
